title tag changed

--- a/PKM.HTML
+++ b/PKM.HTML
@@ -1,5 +1,5 @@
 <html>
-<title>html tutorial</title>
+<title>html tutorial git hub</title>
 <body background="https://coolbackgrounds.io/images/backgrounds/index/ranger-4df6c1b6.png">
 <hr>
 <a href="https://www.adani.com/" target="blank"><img src="https://www.adani.com/-/media/8614C9E10D4A4EC3993153E0208322ED.ashx"></a>
