modified title name

--- a/newproject.html
+++ b/newproject.html
@@ -2,7 +2,7 @@
 <title>table</title>
 <body>
 <hr>
-<h1><font face="impact"><center>TABLE ROWSPAN & COLSPAN</center></font></h1> 
+<h1><font face="impact"><center>TABLE ROWSPAN & COLSPAN FORMAT</center></font></h1> 
 <hr>
 <center><table border="5" height="3" width="3" cellpadding="3" cellspacing="3">
 <tr><td colspan="4">STUDENT & EMPLOYEE DATA LIST</td></tr>
