--- a/dev.html
+++ b/dev.html
@@ -2,7 +2,7 @@
 <title>table</title>
 <body>
 <hr>
-<h1><font color="blue"><center>STUDENT MARKS LIST</center></font></h1>
+<h1><font color="blue"><center>STUDENT MARKS LIST FORMAT</center></font></h1>
 <hr>
 <center><table border="3" cellpadding="5" cellspacing="10">
 <tr><td>1</td><td>2109</td><td>KRISHNA</td><td>690</td></tr>
