--- a/forms.html
+++ b/forms.html
@@ -1,6 +1,6 @@
 <html>
-<title>forms</title>
-<body>
+<title>forms tags</title>
+<body bgcolor="red">
 <form>
     Username<input type="text" name="Username" maxlength="8"/><br><br>
     Password<input type="Password" name="Password" maxlength="8"/><br><br>
@@ -19,7 +19,6 @@
 <textarea name="description" rows="5" clos="30">enter your address 
 </textarea><br><br>
 <input type="submit"><br><br>
-
 </form>
 </body>
 </html>
