code added.html

--- a/dev.html
+++ b/dev.html
@@ -1,5 +1,5 @@
 <html>
-<title>table</title>
+<title>table krishna</title>
 <body>
 <hr>
 <h1><font color="blue"><center>STUDENT MARKS LIST FORMAT</center></font></h1>
